# carrier

./: .clang-format  AntColony.cpp  AntColony.hpp  CMakeLists.txt  IRouter.hpp  LayoutReader.cpp  LayoutReader.hpp  NearestNeighbors.cpp  NearestNeighbors.hpp  README.md  RouteLimiter.cpp  RouteLimiter.hpp  SimplePermutation.cpp  SimplePermutation.hpp  SimpleRecursive.cpp  SimpleRecursive.hpp  Structures.hpp  main.cpp
layouts/: CircleGenerator.cpp  CircleGenerator.hpp  Reader.cpp
layouts/data/: diamond.txt
